--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Allura&family=Poppins:wght@500&family=Roboto:wght@300&family=Work+Sans:wght@400;600&display=swap');
+
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Work Sans', sans-serif;
 
   }
   * {
@@ -20,13 +19,13 @@ body {
   .App {
     background-color: rgb(146, 235, 229);
     width: 25rem;
-    min-height: 200px;
+    min-height: 300px;
     height: min-content;
     border-radius: 15px;
     padding: 20px;
     box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
   }
   
   .score-section {
@@ -47,9 +46,8 @@ body {
     justify-content: center;
     align-items: center;
     width: 10rem;
+    top:50px;
     height: 4vh;
-    bottom: 5%;
-    right: 5%;
 }
   .question-section {
     width: 100%;
@@ -82,10 +80,10 @@ body {
   }
   
   button {
-    width: 100%;
-    font-size: 16px;
+    width:55%;
+    font-size: 14px;
     color: #ffffff;
-    background-color: #252d4a;
+    background-color: #366b73;
     border-radius: 15px;
     display: flex;
     padding: 5px;
@@ -104,7 +102,7 @@ body {
   }
   
   button:hover {
-    background-color: #555e7d;
+    background-color: #acbf58;
   }
   
   button:focus {
